--- a/.github/workflows/CICD_Development.yml
+++ b/.github/workflows/CICD_Development.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: self-hosted
     if: |
       (github.event_name == 'push' && github.ref == 'refs/heads/development') || 
-      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, '${TARGET_PR_LABEL}'))
+      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, "${TARGET_PR_LABEL}"))
 
     steps:
       - name: Extract branch name
