ci: :green_heart: CICD

--- a/.github/workflows/CICD_Development.yml
+++ b/.github/workflows/CICD_Development.yml
@@ -8,14 +8,13 @@ on:
     types:
       - opened
       - synchronize
-      - labeled
-      - unlabeled
       - reopened
       - edited
+      - labeled
     branches: "development"
 
 env:
-  TARGET_PR_LABEL: "deploy_to_dev"
+  TARGET_PR_LABEL: "deploy to dev"
 
 jobs:
   build:
