--- a/.github/workflows/CICD_Development.yml
+++ b/.github/workflows/CICD_Development.yml
@@ -17,14 +17,14 @@ env:
   TARGET_PR_LABEL: "dev deploy"
 
 jobs:
-  # print-labels:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Print Labels
-  #       run: |
-  #         for label in ${{ toJson(github.event.pull_request.labels.*.name) }}; do
-  #           echo "Label: $label"
-  #         done
+  print-labels:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print Labels
+        run: |
+          for label in "${{ github.event.pull_request.labels.*.name }}"; do
+            echo "Label: $label"
+          done
   build:
     runs-on: self-hosted
     if: |
