--- a/.github/workflows/CICD_Development.yml
+++ b/.github/workflows/CICD_Development.yml
@@ -22,6 +22,7 @@ jobs:
     steps:
       - name: Print Labels
         run: |
+          echo "${{ github.event.pull_request.labels.*.name }}"
           for label in "${{ github.event.pull_request.labels.*.name }}"; do
             echo "Label: $label"
           done
