ci: :green_heart: CICD

--- a/.github/workflows/CICD_Development.yml
+++ b/.github/workflows/CICD_Development.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Print Labels
         run: |
           for label in "${{ github.event.pull_request.labels.*.name }}"; do
-            echo "Label: $label"
+            for l in "$label"; do
+              echo "Label: $l"
+            done
           done
           if [[ "${{ github.event.pull_request.labels.*.name }}" == *"${TARGET_PR_LABEL}"* ]]; then
             echo "The '${TARGET_PR_LABEL}' label is applied to this pull request."
