ci: :green_heart: CICD

--- a/.github/workflows/CICD_Development.yml
+++ b/.github/workflows/CICD_Development.yml
@@ -31,7 +31,7 @@ jobs:
           for label in $(echo $labels | jq -r '.[]'); do
             echo "Label: $label"
           done
-          if [[ "${{ github.event.pull_request.labels.*.name }}" == *"${TARGET_PR_LABEL}"* ]]; then
+          if [[ contains(github.event.pull_request.labels.*.name, '${TARGET_PR_LABEL}') ]]; then
             echo "The '${TARGET_PR_LABEL}' label is applied to this pull request."
           else
             echo "The '${TARGET_PR_LABEL}' label is not applied to this pull request."
